src/objects/Retail_Campaign__c.object
<CustomObject>
    <description>This Object is used for Retail Campaign, Yearly Target, Monthly Target.</description>
    <fields>
        <fullName>AS_Marketing_Current_Planned_Budget__c</fullName>
        <label>AS Marketing Current Planned Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>This field will be used to capture the actual cost incured</description>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Actual End Date of the campaign</description>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Expense__c</fullName>
        <description>Actual Expense of the campaign</description>
        <label>Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Invite_Customer__c</fullName>
        <label>Actual Invite Customer</label>
        <summaryFilterItems>
            <field>Retail_Campaign_Member__c.Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Retail_Campaign_Member__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>Retail_Campaign_Member__c.Retail_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Labor_Turnover__c</fullName>
        <description>Retail Campaign: Actual Labor Turn over of the campaign</description>
        <label>Actual Labor Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Actual Lead of the campaign</description>
        <label>Actual Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Maintenance_Products_Sold__c</fullName>
        <description>Retail Campaign: Total No. of Service Contract/Dealer Maintenance Products Sold during campaign</description>
        <label>Actual Maintenance Products Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_No_of_Insurance_Repaired_Vehicle__c</fullName>
        <description>Retail Campaign: Actual No. of Insurance Repaired Vehicle of the campaign</description>
        <label>Actual No. of Insurance Repaired Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_No_of_Insurance_Sold__c</fullName>
        <description>Retail Campaign: Actual Insurance sold of the campaign</description>
        <inlineHelpText>Including Road Side Assistant provided by Mercedes Benz China</inlineHelpText>
        <label>Actual No. of Insurance Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Order__c</fullName>
        <description>Actual Order of the campaign</description>
        <label>Actual Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Parts_Turnover__c</fullName>
        <description>Retail Campaign: Actual Parts Turn over of the campaign</description>
        <label>Actual Parts Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Show_up_Customer__c</fullName>
        <label>Actual Show up Customer</label>
        <summaryFilterItems>
            <field>Retail_Campaign_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Show up, Converted</value>
        </summaryFilterItems>
        <summaryForeignKey>Retail_Campaign_Member__c.Retail_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Show_up_Lost_Customer__c</fullName>
        <description>Retail Campaign: Actual Show up Lost Customer of the campaign</description>
        <label>Actual Show up Lost Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>Actual Start Date of the campaign</description>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_Location__c</fullName>
        <description>Ad Location of the campaign</description>
        <label>Ad Location</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <description>Ad Type of the campaign</description>
        <label>Ad Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Campaign_Member_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to copied on Campaign member for Opro Campaigns</description>
        <label>Add Campaign Member ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Sales_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to copied on Campaign member for Opro Campaigns</description>
        <label>Add Sales Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Service_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to copied on Campaign member for Opro Campaigns</description>
        <label>Add Service Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Status__c</fullName>
        <description>The apply status of the campaign</description>
        <label>Apply Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Need Modify</fullName>
                </value>
                <value>
                    <fullName>Cancel Application</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Validation__c</fullName>
        <formula>Approver__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Segmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check a segmentation criteria must selected</description>
        <label>Auto-Segmentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BP_Category__c</fullName>
        <label>BP Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best innovation in marketing</fullName>
                </value>
                <value>
                    <fullName>Excellence in customer relationship management</fullName>
                </value>
                <value>
                    <fullName>Optimum market results</fullName>
                </value>
                <value>
                    <fullName>The best social media operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BP_Region_Due_Date__c</fullName>
        <formula>Parent_Campaign__r.Region_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BP Region Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BP_Retail_Due_Date__c</fullName>
        <formula>Parent_Campaign__r.Retail_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BP Retail Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BP_Status__c</fullName>
        <label>BP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail Submit</fullName>
                </value>
                <value>
                    <fullName>Region Submit</fullName>
                </value>
                <value>
                    <fullName>Final Submit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>The specific MB brand the campaign is targeting</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>StarElite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budgeted_Cost__c</fullName>
        <description>This field is used to capture the campaign budget information</description>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBU_PbP__c</fullName>
        <description>CBU/PbP of the campaign</description>
        <label>CBU/PbP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBU</fullName>
                </value>
                <value>
                    <fullName>PbP</fullName>
                </value>
                <value>
                    <fullName>CBU&amp;PbP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code_Number__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Campaign Code Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>A unique identifier to distinguish the campaign</description>
        <formula>CASE(TEXT(Driven__c),&apos;Joint&apos;, Relevant_Central_Campaign__r.Campaign_Code__c &amp; &apos;_&apos; &amp; Dealer_Name__r.Dealer_ND_Code__c &amp; &apos;_&apos; &amp; TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &apos;_&apos; &amp;  TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &apos;_&apos; &amp;  RecordType.DeveloperName  &amp; &apos;_&apos;+RIGHT(Campaign_Code_Number__c , 9), &apos;Dealer Driven&apos;, TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &apos;_dealerdriven&apos; &amp;  Dealer_Name__r.Dealer_ND_Code__c  &amp;  &apos;_&apos;+ TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &apos;_&apos; &amp;  TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &apos;_&apos; &amp;  RecordType.DeveloperName  &amp; &apos;_&apos; &amp; RIGHT(Campaign_Code_Number__c , 9),RIGHT(Campaign_Code_Number__c , 9))</formula>
        <label>Campaign Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Execution_Channels__c</fullName>
        <label>Campaign Execution Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>OB</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>DM Magazine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Member_Sharing_Rule__c</fullName>
        <description>Rule which is more an information utilized in Segementation</description>
        <label>Campaign Member Sharing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Account One Dealer</fullName>
                </value>
                <value>
                    <fullName>One Account Multiple Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <label>Campaign Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Sales and After Sales</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Sales -&gt; Crosspoint</fullName>
                </value>
                <value>
                    <fullName>Finance - &gt; Prematurity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>Retail Campaign: The Type of Campaign</description>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts Cross Promotion</fullName>
                </value>
                <value>
                    <fullName>Idle Hour Promotion</fullName>
                </value>
                <value>
                    <fullName>Service Product Promotion</fullName>
                </value>
                <value>
                    <fullName>Insurance Promotion</fullName>
                </value>
                <value>
                    <fullName>Maintenance Promotion</fullName>
                </value>
                <value>
                    <fullName>Familiarization workshop for new vehicle owners</fullName>
                </value>
                <value>
                    <fullName>Familiarization workshop for dormant customers</fullName>
                </value>
                <value>
                    <fullName>VEP(Seasonal Check)</fullName>
                </value>
                <value>
                    <fullName>Used-car buy-back/Trade-in</fullName>
                </value>
                <value>
                    <fullName>New Customer Acquisition</fullName>
                </value>
                <value>
                    <fullName>Promotion on Technical accessories and collections</fullName>
                </value>
                <value>
                    <fullName>POM/Advertisement</fullName>
                </value>
                <value>
                    <fullName>Marketing Survey</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <description>The specific MB series the campaign is targeting</description>
        <inlineHelpText>1.Can choose more than one
2.All select‘GenericModel’</inlineHelpText>
        <label>Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-CLASS</fullName>
                </value>
                <value>
                    <fullName>B-CLASS</fullName>
                </value>
                <value>
                    <fullName>C-CLASS</fullName>
                </value>
                <value>
                    <fullName>C-Class Estate</fullName>
                </value>
                <value>
                    <fullName>C-Coupe</fullName>
                </value>
                <value>
                    <fullName>CL-CLASS</fullName>
                </value>
                <value>
                    <fullName>CLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>CLS-CLASS</fullName>
                </value>
                <value>
                    <fullName>E-CLASS</fullName>
                </value>
                <value>
                    <fullName>E Coupe Sport</fullName>
                </value>
                <value>
                    <fullName>E-Class Cabriolet</fullName>
                </value>
                <value>
                    <fullName>G-CLASS</fullName>
                </value>
                <value>
                    <fullName>GL-CLASS</fullName>
                </value>
                <value>
                    <fullName>GLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>ML-CLASS</fullName>
                </value>
                <value>
                    <fullName>R-CLASS</fullName>
                </value>
                <value>
                    <fullName>S-CLASS</fullName>
                </value>
                <value>
                    <fullName>SL-CLASS</fullName>
                </value>
                <value>
                    <fullName>SLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>Concept Car</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>G65 AMG</fullName>
                </value>
                <value>
                    <fullName>G63 AMG</fullName>
                </value>
                <value>
                    <fullName>E63 AMG</fullName>
                </value>
                <value>
                    <fullName>SLK55 AMG</fullName>
                </value>
                <value>
                    <fullName>C63 AMG</fullName>
                </value>
                <value>
                    <fullName>CLS63 AMG</fullName>
                </value>
                <value>
                    <fullName>G55 AMG</fullName>
                </value>
                <value>
                    <fullName>ML63 AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Campaign_Status__c</fullName>
        <label>Campaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Segmentation</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Response collection</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Dealer_Name__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class1__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class HATCHBACK</fullName>
                </value>
                <value>
                    <fullName>B-Class MPV</fullName>
                </value>
                <value>
                    <fullName>C-Class COUPE</fullName>
                </value>
                <value>
                    <fullName>C-Class HATCHBACK</fullName>
                </value>
                <value>
                    <fullName>C-Class SEDAN</fullName>
                </value>
                <value>
                    <fullName>CL COUPE</fullName>
                </value>
                <value>
                    <fullName>CLA 4 DOOR COUPE</fullName>
                </value>
                <value>
                    <fullName>CLA ESTATE</fullName>
                </value>
                <value>
                    <fullName>CLK CABRIO</fullName>
                </value>
                <value>
                    <fullName>CLK COUPE</fullName>
                </value>
                <value>
                    <fullName>CLS 4 DOOR COUPE</fullName>
                </value>
                <value>
                    <fullName>CLS ESTATE</fullName>
                </value>
                <value>
                    <fullName>E-Class CABRIO</fullName>
                </value>
                <value>
                    <fullName>E-Class ESTATE</fullName>
                </value>
                <value>
                    <fullName>E-Class SEDAN</fullName>
                </value>
                <value>
                    <fullName>G-Class SUV</fullName>
                </value>
                <value>
                    <fullName>GL SUV</fullName>
                </value>
                <value>
                    <fullName>GLA SUV</fullName>
                </value>
                <value>
                    <fullName>GLC SUV</fullName>
                </value>
                <value>
                    <fullName>GLE SUV</fullName>
                </value>
                <value>
                    <fullName>GLK SUV</fullName>
                </value>
                <value>
                    <fullName>Maybach SEDAN</fullName>
                </value>
                <value>
                    <fullName>M-Class SUV</fullName>
                </value>
                <value>
                    <fullName>Mercedes-AMG GT SPORTCOUPE</fullName>
                </value>
                <value>
                    <fullName>R-Class MPV</fullName>
                </value>
                <value>
                    <fullName>S-Class CABRIO</fullName>
                </value>
                <value>
                    <fullName>S-Class COUPE</fullName>
                </value>
                <value>
                    <fullName>S-Class SEDAN</fullName>
                </value>
                <value>
                    <fullName>SL ROADSTER</fullName>
                </value>
                <value>
                    <fullName>SLC ROADSTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>CL-Class</fullName>
                </value>
                <value>
                    <fullName>CLK-Class</fullName>
                </value>
                <value>
                    <fullName>CLS-Class</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>GL-Class</fullName>
                </value>
                <value>
                    <fullName>GLK-Class</fullName>
                </value>
                <value>
                    <fullName>ML-Class</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL-Class</fullName>
                </value>
                <value>
                    <fullName>SLK-Class</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CLA-Class</fullName>
                </value>
                <value>
                    <fullName>GLA-Class</fullName>
                </value>
                <value>
                    <fullName>GLA 45 AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloneCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CloneCampaign</label>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Retail Campaigns (Retail Campaign)</relationshipLabel>
        <relationshipName>Retail_Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>This field is used to capture the end date of the campaign</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments of the campaign</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Template</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipName>Retail_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <formula>Dealer_Name__r.Dealer_ND_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dealer involved in the campaign</description>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Retail_Campaigns_Dealer_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Region__c</fullName>
        <label>Dealer Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH</fullName>
                </value>
                <value>
                    <fullName>SOUTH</fullName>
                </value>
                <value>
                    <fullName>EAST</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Sub_Region__c</fullName>
        <label>Dealer Sub-Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH1</fullName>
                </value>
                <value>
                    <fullName>NORTH2</fullName>
                </value>
                <value>
                    <fullName>NORTH3</fullName>
                </value>
                <value>
                    <fullName>SOUTH1</fullName>
                </value>
                <value>
                    <fullName>SOUTH2</fullName>
                </value>
                <value>
                    <fullName>EAST1</fullName>
                </value>
                <value>
                    <fullName>EAST2</fullName>
                </value>
                <value>
                    <fullName>EAST3</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <description>Delay Reason for campaign</description>
        <label>Delay Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Driven__c</fullName>
        <label>Driven</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Dealer Driven</fullName>
                </value>
                <value>
                    <fullName>Campaign Organized by Central</fullName>
                </value>
                <value>
                    <fullName>Extended Activities from Central’s Campaign</fullName>
                </value>
                <value>
                    <fullName>Local Campaign on Festivals</fullName>
                </value>
                <value>
                    <fullName>Campaign Organized by Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>